# White-Cell

./: .gitignore  AGENT_SYSTEM.md  CHANGELOG.md  CLI_BEFORE_AFTER.md  IMPROVEMENTS_V1_2.md  LICENSE  QUICKSTART.md  README.md  README_AGENT_SYSTEM.md  RUN_INSTRUCTIONS.md  UI_UX_ENHANCEMENTS.md  V1_1_IMPLEMENTATION.md  White-Cell-main.sln  demo_agent_system.py  demo_v1_1.py  main.py  pyproject.toml  requirements.txt  run_whitecell.bat  run_whitecell.ps1  scanner.go  scanner_readme.md  setup_and_run.bat  task_assignment_examples.py  whitecell_logs_20260219_095816.csv
.github/workflows/: ci.yml
WhiteCellShield/: Program.cs  README.md  WhiteCellShield.csproj  compile.bat  compile.ps1  test_shield.py
docs/: CONTRIBUTING_GITHUB.md  IMMUNE_ARCHITECTURE.md  updates.md
tests/: conftest.py  test_cli_commands.py  test_cli_enhanced_integration.py  test_config_groq_migration.py  test_detection.py  test_detection_unit.py  test_engine_integration.py  test_governance.py  test_governance_config.py  test_groq_client_persistence.py  test_guardian.py  test_guardian_config.py  test_immune_system.py  test_parse_command.py  test_risk.py  test_risk_and_engine.py  test_scan_allowlist.py  test_self_improve.py  test_soc_run_parser.py  test_state_memory.py  test_system_guard.py  test_threat_catalog_integration.py  test_website_scanner.py
whitecell/: __init__.py  agent.py  agent_learning.py  api_security.py  attribution.py  brain_storage.py  cli.py  cli_agents.py  cli_commands.py  cli_enhanced.py  cli_shared.py  cli_views.py  command_mode.py  config.py  constants.py  crew.py  detection.py  engine.py  governance.py  groq_client.py  guardian.py  risk.py  security_checks.py  self_improve.py  state.py  system_guard.py  threat_catalog.py  threats_config.py  website_scanner.py
whitecell/immune/: __init__.py  b_cells.py  basophils.py  memory.py  monocytes.py  neutrophils.py  system.py  t_cells.py
